docs(bench): align dev benchmark renderer with main (schema v2 + CWIST Classic/CWIST labels + wider SVGs)